<resources>
    <string name="app_name">asilo</string>

    <!-- Registration -->
    <string name="emailEmpty">Please fill out the E-mail field!</string>
    <string name="checkInputMessage">Please fill all data correctly!</string>
    <string name="registrationSuccess">Registration successful. Confirmation email has been sent!</string>
    <string name="registrationFail">Unexpected error while registering!</string>
    <string name="emailInUse">Account with that email address already exists. Login?</string>
    <string name="usernameInUse">Username already exists.</string>
    <string name="required">Required!</string>
    <string name="register">Register!</string>

    <!-- Registration.UserData -->
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="registerOnLogin">No account? Register here!</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password?</string>

    <!-- Image Upload -->
    <string name="imageUploadSuccess">Image has been successfully uploaded!</string>
    <string name="imageUploadFailure">Image upload has failed!</string>

    <!-- Error messages -->
    <string name="noInternetConnectionMessage">Check your internet connection.</string>
    <string name="emailLoginError">Incorrect email!</string>
    <string name="passwordLoginError">Incorrect password!</string>
    <string name="userNotFoundError">User does not exist. Please register!</string>
    <string name="defaultErrorMessage">Unexpected error occurred!</string>
    <string name="emailError">Email is incorrect!</string>
    <string name="pwRecoveryFail">Unexpected error occurred, check typed email!</string>
    <string name="emailNotVerified">Please verify your email address first.</string>
    <string name="fillAllFields">Please fill all fields!</string>
    <string name="pleaseInsertEmail">Please, enter your e-mail!</string>
    <string name="passwordError">Minimum 8 characters. Must contain at least one capital letter and one number!</string>
    <string name="retypedPasswordError">Password do not match!</string>
    <string name="errorWhileLoadingAnimals">Unexpected error while loading animals!</string>

    <!-- Common -->
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="pwRecoverySuccess">Password recovery link has been sent. Check your email!</string>

    <!-- Exception messages -->
    <string name="fragmentListenerNotImplemented">You must implement the fragment listener!</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- android drawer items -->
    <string name="new_post">New post</string>
    <string name="previous_posts">Previous posts</string>
    <string name="Report_bug">Report an error</string>
    <string name="donate">Donate to shelters</string>
    <string name="logout">Log out</string>
    <string name="down">_____</string>

    <!-- titles -->
    <string name="animals">Animals</string>
    <string name="newAnimal">Add animal</string>

    <string name="logOutQuestion">Are you sure?</string>

</resources>
