<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".Controller.PasswordRecoveryActivity">

    <LinearLayout
        style="@style/WrapHeightMatchWidth"
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/buttonShowLogin"
            style="@style/ButtonLight.White"
            android:layout_weight="1"
            android:text="@string/back"/>

        <Button
            android:id="@+id/buttonRecoveryPassword"
            style="@style/ButtonLight.White"
            android:layout_weight="1"
            android:text="@string/send"/>

    </LinearLayout>

    <ScrollView
        style="@style/ScrollViewRoundVertical"
        android:background="@color/colorPrimaryDark"
        android:layout_above="@+id/buttons" >

        <LinearLayout
            style="@style/WrapHeightMatchWidth"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:paddingTop="50dp"
                style="@style/TextViewWhite"
                android:text="@string/pleaseInsertEmail" />

            <EditText
                android:id="@+id/emailRecoveryPassword"
                style="@style/EditTextWhite"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"/>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>