<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linlaHeaderProgress"
        style="@style/WrapBoth"
        android:layout_margin="@dimen/default_margin_in_app"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>
    </LinearLayout>


    <LinearLayout
        style="@style/WrapHeightMatchWidth"
        android:id="@+id/buttons"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <EditText
            style="@style/EditTextLogin"
            android:id="@+id/mUsernameLogin"
            android:hint="@string/email" />

        <EditText
            style="@style/EditTextLogin"
            android:id="@+id/mPasswordLogin"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgotPasswordLogin"
            style="@style/TextViewPrimaryDark"
            android:text="@string/forgotPassword"
            android:onClick="showRecoveryPassword"/>

    </LinearLayout>

    <LinearLayout
        style="@style/WrapHeightMatchWidth"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:id="@+id/logoAndAppname"/>

    <LinearLayout
        style="@style/WrapHeightMatchWidth"
        android:layout_below="@+id/buttons"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonLight"
            android:text="@string/login"
            android:onClick="login"/>

        <TextView
            android:id="@+id/buttonLoginRegistration"
            style="@style/TextViewPrimaryDark"
            android:text="@string/registerOnLogin"
            android:onClick="showRegistration"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="260dp"
        android:layout_height="216dp"
        android:layout_above="@+id/buttons"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="26dp"
        app:srcCompat="@drawable/logo_login" />

</RelativeLayout>