<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/navigation_header"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/drawerProfileImage"
        style="@style/WrapHeightMatchWidth"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/nameAndLastname"
        style="@style/WrapHeightMatchWidth"
        android:paddingTop="@dimen/nav_header_vertical_spacing_text"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/emailNavigation"
        style="@style/WrapBoth"
        android:paddingTop="@dimen/nav_header_vertical_spacing_text"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_gravity="center"
        android:gravity="center"/>

</LinearLayout>
